# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

AC_PROG_CXX
AC_OBJEXT
AC_EXEEXT

AC_CANONICAL_SYSTEM 
AC_C_BIGENDIAN

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(q4go,0.1)

dnl KDE_SET_PREFIX

AC_PREFIX_DEFAULT(/usr/local)
if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS

CXXFLAGS="$NOOPT_CXXFLAGS" dnl __kdevelop[noopt]__
CFLAGS="$NOOPT_CFLAGS" dnl __kdevelop[noopt]__
dnl CXXFLAGS="$CXXFLAGS $USE_EXCEPTIONS" dnl __kdevelop[exc]__

AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

all_libraries="$all_libraries $USER_LDFLAGS"
all_includes="$all_includes $USER_INCLUDES"
AC_SUBST(all_includes)
AC_SUBST(all_libraries)

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

dnl Look for Qt4 libs
PKG_CHECK_MODULES([QT4], ["QtCore QtGui QtXml Qt3Support"], [], [
	AC_MSG_ERROR([Qt4 libs not found])])
dnl Look for moc, either on $PATH or in $QTDIR/bin
AC_PATH_PROG(MOC, moc, , $PATH:$QTDIR/bin)
if test -z "$MOC" ; then
    AC_MSG_ERROR([Cannot find 'moc'])
fi
AC_PATH_PROG(UIC, uic, , $PATH:$QTDIR/bin)
if test -z "$UIC" ; then
    AC_MSG_ERROR([Cannot find 'uic'])
fi

CXXFLAGS="$CXXFLAGS $QT4_CFLAGS"

AC_SUBST(QT4_LIBS)

dnl KDE_NEED_FLEX dnl __kdevelop__
dnl AC_PROG_YACC dnl __kdevelop__

dnl Perform program name transformation
dnl AC_ARG_PROGRAM


dnl PACKAGE set before

KDE_CREATE_SUBDIRSLIST

dnl add here all your Makefiles. This are created by configure
AC_CONFIG_FILES([ Makefile ])

dnl AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ src/Makefile ])
AC_CONFIG_FILES([ src/pics/Makefile ])
AC_CONFIG_FILES([ src/sounds/Makefile ])
AC_CONFIG_FILES([ src/translations/Makefile ])
AC_CONFIG_FILES([ templates/Makefile ])

dnl CPPFLAGS="$CPPFLAGS -DDATADIR=\"$(datadir)\""
# @@@ fix this
CPPFLAGS="-DDATADIR='\"${prefix}/share/${PACKAGE}\"' $CPPFLAGS"

AC_OUTPUT()
