INCLUDES = $(all_includes)

Picsdir = $(datadir)/qGo/pics
Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
	goldenbeech.jpg kaya.png lemontree.jpg manitoba.jpg maple.jpg plain.png synthetic_1.png \
	synthetic_2.png
noinst_DATA =	Bowl.xpm charset.png charset.xpm  editcut.png \
		editcut.xpm editpaste.png editpaste.xpm \
		filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
		filesaveas.xpm	filesave.png filesave.xpm help.png help.xpm \
		newboard.png newboard.xpm openterm.png	openterm.xpm package_settings.png \
		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
		transform.png transform.xpm \
		window_fullscreen.png	window_fullscreen.xpm seeking.gif \
	coords.xpm sound_off.xpm sound_on.xpm
