INCLUDES = $(all_includes)

Picsdir = $(datadir)/qGo/pics
Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
	goldenbeech.jpg kaya.png lemontree.jpg manitoba.jpg maple.jpg plain.png synthetic_1.png \
	synthetic_2.png
noinst_DATA =	Bowl.xpm charset.png charset.xpm \
		editcut.xpm editpaste.png editpaste.xpm \
		player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
		transform.png transform.xpm seeking.gif
