####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = click.wav connect.wav enter.wav gameend.wav leave.wav match.wav pass.wav say.wav stone.wav talk.wav tictoc.wav 

install-data-local:
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/click.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/connect.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/enter.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/gameend.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/leave.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/match.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/pass.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/say.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/stone.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/talk.wav $(datadir)/qGo/sounds/
	$(mkinstalldirs) $(datadir)/qGo/sounds/
	$(INSTALL_DATA) $(srcdir)/tictoc.wav $(datadir)/qGo/sounds/

uninstall-local:
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/
	-rm -f $(datadir)/qGo/sounds/

####### kdevelop will overwrite this part!!! (end)############
Soundsdir = $(datadir)/qGo/sounds
Sounds_DATA = click.wav connect.wav enter.wav gameend.wav leave.wav match.wav \
	pass.wav say.wav stone.wav talk.wav tictoc.wav
