####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = click.wav connect.wav enter.wav gameend.wav leave.wav match.wav pass.wav say.wav stone.wav talk.wav tictoc.wav

install-data-local:
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/click.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/connect.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/enter.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/gameend.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/leave.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/match.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/pass.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/say.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/stone.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/talk.wav $(pkgdatadir)/sounds/
	$(mkinstalldirs) $(pkgdatadir)/sounds/
	$(INSTALL_DATA) $(srcdir)/tictoc.wav $(pkgdatadir)/sounds/

uninstall-local:
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/
	-rm -f $(pkgdatadir)/sounds/

####### kdevelop will overwrite this part!!! (end)############
Soundsdir = $(pkgdatadir)/sounds
Sounds_DATA = click.wav connect.wav enter.wav gameend.wav leave.wav match.wav \
	pass.wav say.wav stone.wav talk.wav tictoc.wav
