####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = qgo_de.qm qgo_fr.qm qgo_it.qm qgo_nl.qm 

install-data-local:
	$(mkinstalldirs) $(datadir)/qGo/translations/
	$(INSTALL_DATA) $(srcdir)/qgo_de.qm $(datadir)/qGo/translations/
	$(mkinstalldirs) $(datadir)/qGo/translations/
	$(INSTALL_DATA) $(srcdir)/qgo_fr.qm $(datadir)/qGo/translations/
	$(mkinstalldirs) $(datadir)/qGo/translations/
	$(INSTALL_DATA) $(srcdir)/qgo_it.qm $(datadir)/qGo/translations/
	$(mkinstalldirs) $(datadir)/qGo/translations/
	$(INSTALL_DATA) $(srcdir)/qgo_nl.qm $(datadir)/qGo/translations/

uninstall-local:
	-rm -f $(datadir)/qGo/translations/
	-rm -f $(datadir)/qGo/translations/
	-rm -f $(datadir)/qGo/translations/
	-rm -f $(datadir)/qGo/translations/

####### kdevelop will overwrite this part!!! (end)############

Translationsdir = $(datadir)/qGo/translations
Translations_DATA = qgo_de.qm qgo_fr.qm qgo_it.qm qgo_nl.qm qgo_cz.qm qgo_zh.qm \
		qgo_dk.qm qgo_pt.qm qgo_ru.qm
